--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,53 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+[
+    {
+        "_id":"60267bd0c70f9a00168093ba",
+        "title":"How to Make Cut-Out Sugar Cookies",
+        "body":"Versatile sugar cookie dough is like edible modeling clay. It can be simply rolled into balls and baked, like snickerdoodles, but when you want to take it further and cut sugar cookie into shapes, like The Best Rolled Sugar Cookies, these tips will help your sugar cookie cut-outs turn out beautifully every time."
+        },
+        {
+            "_id":"60267bd0c70f9a00168093bb",
+            "title":"Thick Cut-Outs",
+            "body":"A big batch of big thick sugar cookies. These are THE big soft sugar cookies you have been looking for. Frost them while warm and sprinkle with colored sugar."
+            },
+            {
+                "_id":"60267bd0c70f9a00168093bc",
+                "title":"Chicken Pot Pie IX",
+                "body":"A delicious chicken pot pie made from scratch with carrots, peas, and celery for a comfort…"
+                },
+                {
+                    "_id":"60267bd0c70f9a00168093bd",
+                    "title":"Ginger-Chicken Stir Fry",
+                    "body":"Stir fries require very little cooking time and you can pretty much use any vegetables you like, but the star of this one is the ginger. This dish is quick and easy to make, but get all of your ingredients together (including mixing the sauce) before you start cooking because everything happens fast! Serve with rice, and garnish with sliced green onions."
+                    },
+                    {
+                        "_id":"60267bd0c70f9a00168093be",
+                        "title":"Air Fryer Keto Chicken Wings",
+                        "body":"These air-fried chicken wings are finished in under 15 minutes and a great dish if you are on the keto diet. If desired, separate wings into drumettes."
+                        },
+                        {
+                            "_id":"60267bd0c70f9a00168093bf",
+                            "title":"Chicken Fajita Cauliflower Pizza",
+                            "body":"All your favorite chicken fajita flavors on a delicious, better-for-you cauliflower pizza crust!"
+                            },
+                            {
+                                "_id":"60267bd0c70f9a00168093c0",
+                                "title":"Margherita Pizza with Sausage and Pesto",
+                                "body":"Two of my favorite ingredients, pesto sauce and sausage, come together to make one of my family's favorite foods: pizza! They loved how crispy, melty, and cheesy it was! Feel free to adjust ingredients according to your personal tastes."
+                                },
+                                {
+                                    "_id":"60267bd0c70f9a00168093c1",
+                                    "title":"Taco Salad Pizza",
+                                    "body":"When you can't decide between pizza and tacos, make both! Save time by starting with a pre-made frozen CAULIPOWER® crust."
+                                    },
+                                    {
+                                        "_id":"60267bd0c70f9a00168093c2","title":"BLAT Pizza with Basil Mayo",
+                                        "body":"Bacon, lettuce, tomato, and avocado combine for a twist on gluten-free pizza that explodes with crispy texture and fresh flavors."
+                                        },
+                                        {
+                                            "_id":"60267bd0c70f9a00168093c3",
+                                            "title":"Greek Veggie Pizza",
+                                            "body":"Top this crispy, melty three-cheese pizza with some Greek flavors and a quick, easy chilled Greek sauce."
+                                            }
+                                            ]
